// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parade Group decoder correctly decodes valid CMS Parade Group 1`] = `
Object {
  "contentType": "paradeGroup",
  "fields": Object {
    "facebookUrl": "https://red-badger.com/Ii3rT8J7D7oRAsi73e2G",
    "name": "BhabSLtI692l05Qliy85",
    "twitterUrl": "https://red-badger.com/24f3tJ9kLEIsCL0O8y881NG4pjYP2",
    "websiteUrl": null,
  },
  "id": "hG",
  "locale": "en-GB",
  "revision": 1,
}
`;

exports[`Parade Group decoder correctly decodes valid CMS Parade Group with missing optional fields 1`] = `
Object {
  "contentType": "paradeGroup",
  "fields": Object {
    "facebookUrl": null,
    "name": "mm2T1WpGuu4k03kl04088fDh1B5V",
    "twitterUrl": null,
    "websiteUrl": null,
  },
  "id": "jU1T9830fV3Bl3Z3fk7yktQp",
  "locale": "en-GB",
  "revision": 1,
}
`;
